--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "sherlock-js",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "start": "bun run src/index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
