--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
   "name": "sherlock-js",
   "module": "src/index.ts",
+  "version": "0.0.1",
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
   },
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "bun run src/index.ts"
   },
-  "type": "module"
+  "type": "module",
+  "keywords": [
+    "sherlock",
+    "javascript",
+    "typescript"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ilyaSuperGlue/sherlock-js.git"
+  },
+  "author": "ilyas <ilyasabdurahmanyusuf@gmail.com> (https://github.com/hikaaam)",
+  "license": "MIT",
+  "homepage": "https://github.com/ilyaSuperGlue/sherlock-js#readme",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
+  "packageManager": "bun@1.3.2"
 }
