--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,35 +2,17 @@
   "compilerOptions": {
     "lib": ["ESNext"],
     "target": "ESNext",
-    "module": "Preserve",
-    "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
-    "composite": true,
+    "module": "ES2020",
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "allowImportingTsExtensions": false,
     "verbatimModuleSyntax": true,
     "strict": true,
     "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false,
-    "paths": {
-      "@resources": ["./src/resources"],
-      "@libs": ["./src/libs"],
-      "@feats": ["./src/feats"],
-      "@src/types": ["./src/types"]
-    },
     "declaration": true,
-    "declarationDir": "dist",
     "declarationMap": true,
-    "emitDeclarationOnly": true,
     "outDir": "dist",
     "rootDir": "src"
   },
-  "include": ["src/**/*", "src/resources/data.json"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
