--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": false,
     "verbatimModuleSyntax": true,
+    "emitDeclarationOnly": true,
     "strict": true,
     "skipLibCheck": true,
     "declaration": true,
