update package json

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "type": "git",
     "url": "git+https://github.com/ilyaSuperGlue/sherlock-js.git"
   },
-  "author": "ilyas <ilyasabdurahmanyusuf@gmail.com> (https://github.com/hikaaam)",
+  "author": "ilyas <ilyasabdurahmanyusuf@gmail.com> (https://github.com/ilyaSuperGlue)",
   "license": "MIT",
   "homepage": "https://github.com/ilyaSuperGlue/sherlock-js#readme",
   "private": false,
