--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ilyasuperglue/sherlock-js",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "a library for running sherlock on JS env",
   "type": "module",
   "main": "dist/index.js",
@@ -21,9 +21,7 @@
     "@types/bun": "latest",
     "typescript": "^5.9.3"
   },
-  "peerDependencies": {
-    "typescript": "^5.9.3"
-  },
+  "peerDependencies": {},
   "keywords": [
     "sherlock",
     "javascript",
